--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,16 +3,6 @@ server:
 
 spring:
   application:
-    name: RESERVATION-SERVICE
+    name: reservation-service
   profiles:
-    default: local
-
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-
-  instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    default: secret
