feat: 업체로부터 승인/거절 상태 받고 변경

--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,9 @@ dependencies {
 	//axon
 	implementation group: 'org.axonframework', name: 'axon-spring-boot-starter', version: "$axonVersion"
 	implementation group: 'org.axonframework', name: 'axon-configuration', version: "$axonVersion"
-
+	//kafka
+	implementation 'org.springframework.kafka:spring-kafka'
+	testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 dependencyManagement {
