--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,10 +4,15 @@ spring:
       on-profile: local
 
   datasource:
-    url: jdbc:mysql://localhost:3306/test
-    username: root
-    password: 1234
+    url : jdbc:mysql://localhost:3306/reservation?serverTimezone=Asia/Seoul
+    username: pjm
+    password: jmjm1102
     driver-class-name: com.mysql.cj.jdbc.Driver
+  #  second-datasource:
+  #    jdbcUrl : jdbc:mysql://localhost:3306/payment?serverTimezone=Asia/Seoul
+  #    username: pjm
+  #    password: jmjm1102
+  #    driver-class-name: com.mysql.cj.jdbc.Driver
 
   data:
     redis:
@@ -15,11 +20,20 @@ spring:
       port: 6379
 
   jpa:
-    database: mysql
     hibernate:
       ddl-auto: update
-      format_sql: true
-      show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+  kafka:
+    topic: reservation-accept-events
+    consumer:
+      bootstrap-servers: localhost:9092
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+
+logging.level:
+  org.hibernate.SQL: debug
 
 springdoc:
   swagger-ui:
@@ -52,3 +66,15 @@ eureka:
 
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+axon:
+  axonserver:
+    servers: 127.0.0.1:8124
+  serializer:
+    general: xstream
+  distributed:
+    enabled: true
+
+
+
+
+
